# responsible-ai-governance-toolkit

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: sample_checklist.yaml  sample_model.yaml  sample_system.yaml
governance/: agentic-ai-governance-checklist.md  audit-framework-for-agentic-systems.md  enterprise-ai-governance-framework.md  eu-ai-act.md  human-oversight-and-accountability-policy.md  iso-42001.md  nist-ai-rmf.md
src/rai_toolkit/: __init__.py  checklist.py  cli.py  eu_ai_act.py  model_card.py  risk.py
templates/: dpia-privacy.md  eu-ai-act-checklist.md  model-card.md  risk-assessment.md
tests/: test_toolkit.py
