[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-toolkit"
version = "0.1.0"
description = "Responsible AI governance as code: EU AI Act classification, risk scoring, model cards, checklists."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Santiago Santa María Morales" }]
keywords = ["responsible-ai", "ai-governance", "eu-ai-act", "model-cards", "privacy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
rai = "rai_toolkit.cli:main"

[project.urls]
Homepage = "https://santismm.com"
Repository = "https://github.com/santismm/responsible-ai-governance-toolkit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
